--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 },
 "dependencies": {
   "express": "^4.17.1",
-  "mongoose": "^7.0.2"
+  "mongoose": "^7.0.2",
+  "dotenv": "16.3.1"
 },
 "devDependencies": {
   "nodemon": "^2.0.9",
